--- a/src/OnRamp/OnRamp.csproj
+++ b/src/OnRamp/OnRamp.csproj
@@ -9,7 +9,7 @@
     <Authors>OnRamp Developers</Authors>
     <Company>Avanade</Company>
     <Description>OnRamp Code Generator.</Description>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>preview</LangVersion>
     <Copyright>Avanade (c)</Copyright>
     <PackageProjectUrl>https://github.com/Avanade/OnRamp</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Avanade/OnRamp</RepositoryUrl>
