--- a/src/OnRamp/OnRamp.csproj
+++ b/src/OnRamp/OnRamp.csproj
@@ -69,6 +69,8 @@
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Pluralize.NET" Version="1.0.2" />
+    <PackageReference Include="StrongNamer" Version="0.2.5" />
     <PackageReference Include="YamlDotNet" Version="11.2.1" />
   </ItemGroup>
 
