--- a/src/OnRamp/OnRamp.csproj
+++ b/src/OnRamp/OnRamp.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>OnRamp</RootNamespace>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>OnRamp Developers</Authors>
     <Company>Avanade</Company>
@@ -32,30 +32,13 @@
     <IncludeSymbols>true</IncludeSymbols>
     <EmbedAllSources>true</EmbedAllSources>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="Resources\SelectTableAlwaysGeneratedColumns.sql" />
-    <None Remove="Resources\SelectTableAndColumns.sql" />
-    <None Remove="Resources\SelectTableForeignKeys.sql" />
-    <None Remove="Resources\SelectTableGeneratedColumns.sql" />
-    <None Remove="Resources\SelectTableIdentityColumns.sql" />
-    <None Remove="Resources\SelectTablePrimaryKey.sql" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\SelectTableAlwaysGeneratedColumns.sql" />
-    <EmbeddedResource Include="Resources\SelectTableAndColumns.sql" />
-    <EmbeddedResource Include="Resources\SelectTableForeignKeys.sql" />
-    <EmbeddedResource Include="Resources\SelectTableGeneratedColumns.sql" />
-    <EmbeddedResource Include="Resources\SelectTableIdentityColumns.sql" />
-    <EmbeddedResource Include="Resources\SelectTablePrimaryKey.sql" />
-  </ItemGroup>
 
   <ItemGroup>
     <None Include="..\..\images\Logo256x256.png" Link="Logo256x256.png">
