--- a/src/OnRamp/OnRamp.csproj
+++ b/src/OnRamp/OnRamp.csproj
@@ -4,9 +4,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>OnRamp</RootNamespace>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>OnRamp Developers</Authors>
+    <Authors>Avanade</Authors>
     <Company>Avanade</Company>
     <Description>OnRamp Code Generator.</Description>
     <LangVersion>preview</LangVersion>
@@ -24,7 +24,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Title>OnRamp Code Generator.</Title>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
-    <PackageTags>onramp on-ramp code-generation codegen code-gen handlebars handlebars.js</PackageTags>
+    <PackageTags>onramp on-ramp code-generation codegen code-gen handlebars handlebars.js handlebars.net</PackageTags>
     <RunAnalyzersDuringBuild>true</RunAnalyzersDuringBuild>
     <Nullable>enable</Nullable>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
